Estructuracion en libro jupiter

--- a/procesamiento datos/network_traffic.ipynb
+++ b/procesamiento datos/network_traffic.ipynb
@@ -1,13 +1,23 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project :Network traffic analysis\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import random"
    ]
   },
   {
@@ -15,7 +25,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project :Network traffic analysis\n"
+    "## Join different network traffic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo final guardado en:  ../Dataset Crudo Proceso de Clasificación/output.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define la ruta de los archivos CSV en crudo\n",
+    "raw_data_path = r\"../Dataset en Crudo\"\n",
+    "\n",
+    "# Busca todos los archivos CSV en la ruta\n",
+    "csv_files = [f for f in os.listdir(raw_data_path) if f.endswith('.csv')]\n",
+    "\n",
+    "# Crea una lista vacía para almacenar los DataFrames\n",
+    "dataframes = []\n",
+    "\n",
+    "# Itera sobre cada archivo CSV y agrega su DataFrame a la lista\n",
+    "for csv_file in csv_files:\n",
+    "    file_path = os.path.join(raw_data_path, csv_file)\n",
+    "    df = pd.read_csv(file_path, encoding='ISO-8859-1')\n",
+    "    dataframes.append(df)\n",
+    "\n",
+    "# Concatena todos los DataFrames en uno solo\n",
+    "final_df = pd.concat(dataframes, ignore_index=True)\n",
+    "\n",
+    "# Define la ruta y el nombre del archivo final\n",
+    "output_path = r\"../Dataset Crudo Proceso de Clasificación/output.csv\"\n",
+    "\n",
+    "# Guarda el archivo final en la ruta especificada\n",
+    "final_df.to_csv(output_path, index=False)\n",
+    "\n",
+    "print(\"Archivo final guardado en: \", output_path)"
    ]
   },
   {
@@ -28,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#read dataset and load it into dataframe\n",
-    "data = \"resources/output.csv\"\n",
+    "data = r\"../Dataset Crudo Proceso de Clasificación/output.csv\"\n",
     "df = pd.read_csv(data, delimiter=',')"
    ]
   },
@@ -47,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -129,49 +180,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    " \n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    " \n",
-    "from pylab import rcParams\n",
-    " \n",
-    "from imblearn.under_sampling import NearMiss\n",
-    "from imblearn.over_sampling import RandomOverSampler\n",
-    "from imblearn.combine import SMOTETomek\n",
-    "from imblearn.ensemble import BalancedBaggingClassifier\n",
-    " \n",
-    "from collections import Counter"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data preprocessing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -180,11 +188,87 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define la ruta del archivo CSV y la carpeta para guardar los nuevos archivos\n",
+    "csv_path = r'../Dataset Crudo Proceso de Clasificación/output.csv'\n",
+    "folder_path = r'../Dataset Proceso de Clasificación'\n",
+    "\n",
+    "# Lee el archivo CSV en un DataFrame\n",
+    "df = pd.read_csv(csv_path)\n",
+    "\n",
+    "# Elimina la columna \"No.\"\n",
+    "df = df.drop('No.', axis=1)\n",
+    "\n",
+    "# Crea la carpeta si no existe\n",
+    "if not os.path.exists(folder_path):\n",
+    "    os.makedirs(folder_path)\n",
+    "\n",
+    "# Crea un diccionario para almacenar los DataFrames de cada protocolo\n",
+    "protocol_dfs = {}\n",
+    "\n",
+    "# Filtra los resultados del conteo por los protocolos de aplicación conocidos\n",
+    "app_protocols = ['HTTP', 'DNS', 'TCP', 'FTP', 'ICMP', 'UDP']\n",
+    "for protocol in app_protocols:\n",
+    "    # Verifica si hay suficientes filas en el DataFrame para el protocolo actual\n",
+    "    if (df['Protocol'] == protocol).sum() <= 700:\n",
+    "        data = (df['Protocol'] == protocol).sum()\n",
+    "        print(data)\n",
+    "        print(f\"No hay suficientes filas para el protocolo {protocol}\")\n",
+    "        continue\n",
+    "    \n",
+    "    # Selecciona 700 filas aleatorias del DataFrame para cada protocolo\n",
+    "    random.seed(42)\n",
+    "    protocol_df = df.loc[df['Protocol'] == protocol].sample(n=700, random_state=42)\n",
+    "    protocol_dfs[protocol] = protocol_df\n",
+    "\n",
+    "# Guarda cada DataFrame en un archivo CSV separado\n",
+    "for protocol, protocol_df in protocol_dfs.items():\n",
+    "    filename = f'{protocol.lower()}_output.csv'\n",
+    "    file_path = os.path.join(folder_path, filename)\n",
+    "    protocol_df.to_csv(file_path, index=False)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Dataset Consolidation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define la ruta de la carpeta que contiene los archivos CSV\n",
+    "folder_path = r'../Dataset Proceso de Clasificación'\n",
+    "\n",
+    "# Crea una lista vacía para almacenar los DataFrames de cada archivo CSV\n",
+    "dfs = []\n",
+    "\n",
+    "# Lee cada archivo CSV en un DataFrame y agrégalo a la lista\n",
+    "for filename in os.listdir(folder_path):\n",
+    "    if filename.endswith('.csv'):\n",
+    "        file_path = os.path.join(folder_path, filename)\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        dfs.append(df)\n",
+    "\n",
+    "# Concatena los DataFrames en uno solo\n",
+    "df = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "# Mezcla las filas del DataFrame de forma pseudoaleatoria\n",
+    "random.seed(42)\n",
+    "df = df.sample(frac=1).reset_index(drop=True)\n",
+    "\n",
+    "# Guarda el DataFrame mezclado en un archivo CSV\n",
+    "mixed_csv_path = r'C:\\Users\\diego\\Videos\\Proyecto Analisis de Red\\Proyecto-Analisis-de-Red\\Dataset Analisis de redes\\dataset.csv'\n",
+    "df.to_csv(mixed_csv_path, index=False)"
    ]
   }
  ],
@@ -204,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
