--- a/procesamiento datos/network_traffic.ipynb
+++ b/procesamiento datos/network_traffic.ipynb
@@ -173,6 +173,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The list of unique variables in that column is obtained from the column called *\"Protocol\"*, for this the ***\".unique()\"*** method is used. Here it gives us how many protocols are in the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
