aplicaion random forest
precisión del modelo

--- a/procesamiento datos/network_traffic.ipynb
+++ b/procesamiento datos/network_traffic.ipynb
@@ -10,14 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "import random"
+    "import random\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -509,6 +513,51 @@
     "    plt.ylabel('Frequency')\n",
     "    plt.title(f'{protocol} - Source IP Address Frequencies')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9833333333333333\n",
+      "Precisión del modelo: 0.9833333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Seleccionar las características y la variable objetivo\n",
+    "\n",
+    "#preprocesamiento datos\n",
+    "# Convertir las variables categóricas a numéricas usando LabelEncoder\n",
+    "label_encoder = LabelEncoder()\n",
+    "df['Source'] = label_encoder.fit_transform(df['Source'])\n",
+    "df['Destination'] = label_encoder.fit_transform(df['Destination'])\n",
+    "df['Protocol'] = label_encoder.fit_transform(df['Protocol'])\n",
+    "df['Info'] = label_encoder.fit_transform(df['Info'])\n",
+    "\n",
+    "# Dividir los datos en características (X) y etiquetas (y)\n",
+    "X = df[['Time', 'Source', 'Destination', 'Length', 'Info']]\n",
+    "Y = df['Protocol']\n",
+    "\n",
+    "# Dividir el dataset en conjunto de entrenamiento y conjunto de prueba\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.1, random_state=0)\n",
+    "\n",
+    "# Crear y entrenar el modelo de Random Forest\n",
+    "model = RandomForestClassifier(n_estimators=15, min_samples_leaf=10)\n",
+    "model.fit(X_train, Y_train)\n",
+    "\n",
+    "print(model.score(X_test, Y_test))\n",
+    "# Realizar predicciones en el conjunto de prueba\n",
+    "Y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Calcular la precisión del modelo\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "print(\"Precisión del modelo:\", accuracy)"
    ]
   }
  ],
