Update documentation of Data transformation.

--- a/procesamiento datos/network_traffic.ipynb
+++ b/procesamiento datos/network_traffic.ipynb
@@ -293,8 +293,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the Data transformstion section we do the same procedure we did initially, that is to define the path of the file to be read and the folder where the new data will be saved, the file is read, and now the *\"No\"* column is eliminated since it is a column that does not represent important information for the analysis to be performed.\n",
+    "\n",
+    "Then, the folder is created to avoid any inconvenience of non-existence, then the dictionary that will store the DataFrames of each protocol is created.\n",
+    "\n",
+    "Now we filter the results by the layer 3 protocols that we want to take into account for this network traffic analysis, here we verify that there are enough rows for each protocol since we want to level the amount of data to be analyzed, in this case we left 700 as the amount of data for each protocol.\n",
+    "\n",
+    "Finally, each dataframe is saved in a separate csv file. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
