Document of bar chart

--- a/procesamiento datos/network_traffic.ipynb
+++ b/procesamiento datos/network_traffic.ipynb
@@ -358,6 +358,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the Dataset Consolidation section you define the path to the folder that contains each of the csv files that were previously created.\n",
+    "\n",
+    "Then an empty list is created where the Dataframes of each CSV file will be stored, then each of these files is read and added to the list that was created.\n",
+    "\n",
+    "Now we concatenate the frames so that they are as one and we make the mixture of the rows in a pseudo-random way.\n",
+    "\n",
+    "Then this Dateframe mixed in a pseudo-random way is saved in a csv file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -389,6 +402,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we count again the amount of data per protocol, here we check that in fact all of them have 700 data to have an equal distribution of them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -412,6 +432,13 @@
    ],
    "source": [
     "df['Protocol'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These frequencies are then displayed in a bar chart showing the protocol and the amount of data."
    ]
   },
   {
