Update of box plot

--- a/procesamiento datos/network_traffic.ipynb
+++ b/procesamiento datos/network_traffic.ipynb
@@ -472,6 +472,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A box plot (or box and whisker plot) of the packet lengths in a data set is now created. The box plot is a graphical tool used to represent the distribution of a data set and can be useful for visualizing the distribution of data and detecting outliers in a data set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
