Update protocol bar charts with ip addresses.

--- a/procesamiento datos/network_traffic.ipynb
+++ b/procesamiento datos/network_traffic.ipynb
@@ -475,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A box plot (or box and whisker plot) of the packet lengths in a data set is now created. The box plot is a graphical tool used to represent the distribution of a data set and can be useful for visualizing the distribution of data and detecting outliers in a data set."
+    "A box plot (or box and whisker plot) of the packet lengths in a data set is now created. The box plot is a graphical tool used to represent the distribution of a data set and can be useful for visualizing the distribution of data and detecting outliers in a data set. "
    ]
   },
   {
@@ -502,6 +502,17 @@
     "plt.ylabel('Length')\n",
     "plt.title('Distribution of Packet Lengths')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we are using a *\"for\"* to create bar charts of the source and destination IP address frequencies for different network protocols. \n",
+    "\n",
+    "First a list called protocols is created containing the names of the network protocols to be analyzed. Then, a for loop is started that loops through each protocol in the protocols list, after which the DataFrame df is filtered to obtain only the rows that correspond to the current protocol in the for loop and the frequencies of the destination IP addresses are obtained in the filtered DataFrame protocol_df.\n",
+    "Now with *\"source_freq = protocol_df['Source'].value_counts()\"* used to get the frequencies of the source IP addresses in the filtered DataFrame.\n",
+    "Finally, the bar charts of the source and destination IP address frequencies for the network protocols are created. For each protocol, the DataFrame df is filtered to obtain only the rows that correspond to the protocol."
    ]
   },
   {
