Cambios en network_traffic.ipynb en project y join

--- a/procesamiento datos/network_traffic.ipynb
+++ b/procesamiento datos/network_traffic.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,6 +21,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use pandas, matplotlib.pyplot, os and random imports for implementing a Random Forest algorithm. \n",
+    "These libraries and modules provide useful functionality for data manipulation, visualization, and random operations.\n",
+    "\n",
+    "import pandas as pd: Imports the pandas library and assigns it the alias \"pd\". \n",
+    "This library is a data analysis that offers flexible and efficient data structures, such as DataFrames, that can be used to store and manipulate the data used in training and evaluating a Random Forest model.\n",
+    "\n",
+    "import matplotlib.pyplot as plt: Imports the pyplot module from the matplotlib library and assigns it the alias \"plt\". \n",
+    "Matplotlib is a Python visualization library, and pyplot provides an interface for creating plots and visualizations. \n",
+    "\n",
+    "import os: Imports the \"os\" module that provides functions to interact with the operating system. \n",
+    "We use it for access to filepaths, create directories, verify the existence of files, among other operations related to the manipulation of files or directories necessary in the development of the algorithm.\n",
+    "\n",
+    "import random: Imports the \"random\" module that provides functions for generating random numbers and performing random operations.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,6 +91,31 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code finds all the CSV files in a directory, loads them into separate DataFrames, and then concatenates them into a single DataFrame. Finally, it saves this DataFrame to a specified CSV file.\n",
+    "\n",
+    "Defines the path of the directory containing the raw CSV files: raw_data_path = r\"../Dataset in Raw\"\n",
+    "\n",
+    "It uses the os.listdir() function to find all CSV files in the specified directory and stores them in the csv_files list.\n",
+    "\n",
+    "Creates an empty list called dataframes that will be used to store the DataFrames of the CSV files.\n",
+    "\n",
+    "Iterates over each CSV file in csv_files. For each file, create the full path using os.path.join() and then use pandas' pd.read_csv() to read the CSV file and load it into a DataFrame called df. Next, add this DataFrame to the dataframes list.\n",
+    "\n",
+    "Use pandas' pd.concat() to concatenate all the DataFrames in the dataframes list into a single DataFrame called final_df. The ignore_index=True parameter is used to reset the indexes of the resulting DataFrame.\n",
+    "\n",
+    "Define the path and name of the final file using output_path.\n",
+    "\n",
+    "Use the pandas to_csv() method on the final_df DataFrame to save the final file to the path specified by output_path . The index=False parameter is used to not include the index in the saved CSV file.\n",
+    "\n",
+    "Prints the path of the final file saved to the console.\n"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,6 +134,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,6 +142,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -127,6 +177,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,6 +224,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -206,6 +258,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -247,6 +300,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -286,6 +340,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,6 +348,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -351,6 +407,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -358,6 +415,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -402,6 +460,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -435,6 +494,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -472,6 +532,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -505,6 +566,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
