--- a/procesamiento datos/network_traffic.ipynb
+++ b/procesamiento datos/network_traffic.ipynb
@@ -720,7 +720,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.11"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
    "version": "3.10.9"
   }
  },
