--- a/Neuronal/Neuronal.ipynb
+++ b/Neuronal/Neuronal.ipynb
@@ -285,6 +285,91 @@
     "plt.show()\n",
     "print('Top 3 the attack types are : ',df['Attack Type'].value_counts().index[:3].tolist())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,axis = plt.subplots(figsize=(12,10))\n",
+    "sns.heatmap(df.isnull(), cmap='cool')\n",
+    "print(\"we can see that there are no missing values in the dataset\")\n",
+    "plt.title(\"Missing values in the dataset\")\n",
+    "axis.set_xlabel(\"Features\")\n",
+    "axis.set_ylabel(\"Rows\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Paso 2: Excluir la columna irrelevante antes de calcular la correlación\n",
+    "df = df[[col for col in df if df[col].nunique() > 1]]\n",
+    "\n",
+    "# Paso 3: Convertir las columnas categóricas a numéricas utilizando one-hot encoding\n",
+    "df = pd.get_dummies(df)\n",
+    "\n",
+    "# Paso 4: Calcular la correlación y graficar el mapa de calor\n",
+    "corr = df.corr()\n",
+    "print(df.shape)\n",
+    "fig, ax = plt.subplots(figsize=(17, 15))\n",
+    "sns.heatmap(corr, cmap='coolwarm', ax=ax, linewidths=0.1)\n",
+    "plt.title(\"Correlación entre características\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "high_corr = corr[abs(corr) > 0.8] # type: ignore\n",
+    "\n",
+    "high_corr_pairs = high_corr.unstack().sort_values(kind=\"quicksort\", ascending=False).drop_duplicates()\n",
+    "\n",
+    "high_corr_pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_columns', None)\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
