--- a/Neuronal/Neuronal.ipynb
+++ b/Neuronal/Neuronal.ipynb
@@ -307,19 +307,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Seleccionar solo las columnas numéricas\n",
+    "df_numeric = df.select_dtypes(include=np.number)\n",
     "\n",
-    "# Paso 2: Excluir la columna irrelevante antes de calcular la correlación\n",
-    "df = df[[col for col in df if df[col].nunique() > 1]]\n",
+    "# Eliminar las columnas con una única categoría\n",
+    "df_numeric = df_numeric[[col for col in df_numeric if df_numeric[col].nunique() > 1]]\n",
     "\n",
-    "# Paso 3: Convertir las columnas categóricas a numéricas utilizando one-hot encoding\n",
-    "df = pd.get_dummies(df)\n",
+    "# Calcular la matriz de correlación\n",
+    "corr = df_numeric.corr()\n",
     "\n",
-    "# Paso 4: Calcular la correlación y graficar el mapa de calor\n",
-    "corr = df.corr()\n",
-    "print(df.shape)\n",
+    "# Crear el gráfico de calor\n",
     "fig, ax = plt.subplots(figsize=(17, 15))\n",
     "sns.heatmap(corr, cmap='coolwarm', ax=ax, linewidths=0.1)\n",
-    "plt.title(\"Correlación entre características\")\n",
+    "plt.title(\"Correlación entre variables\")\n",
     "plt.show()"
    ]
   },
@@ -360,8 +360,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_columns', None)\n",
-    "print(df)\n"
+    "df['protocol_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['service'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['flag'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Le = LabelEncoder()\n",
+    "df['protocol_type'] = Le.fit_transform(df['protocol_type'])\n",
+    "df['service'] = Le.fit_transform(df['service'])\n",
+    "df['flag'] = Le.fit_transform(df['flag'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['protocol_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(['service'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['flag'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('processed_kdd.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(['label', 'Attack Type'], axis=1)\n",
+    "y = df['Attack Type']\n",
+    "scaler = MinMaxScaler()\n",
+    "X = scaler.fit_transform(X)"
    ]
   },
   {
