--- a/Neuronal/Neuronal.ipynb
+++ b/Neuronal/Neuronal.ipynb
@@ -455,7 +455,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = np.array(y_train)\n",
+    "y_test = np.array(y_test)\n",
+    "encoder = OneHotEncoder()\n",
+    "y_train = encoder.fit_transform(y_train.reshape(-1, 1)).toarray()\n",
+    "y_test = encoder.fit_transform(y_test.reshape(-1, 1)).toarray()"
+   ]
   }
  ],
  "metadata": {
