--- a/Neuronal/Neuronal.ipynb
+++ b/Neuronal/Neuronal.ipynb
@@ -471,6 +471,77 @@
     "y_train = encoder.fit_transform(y_train.reshape(-1, 1)).toarray()\n",
     "y_test = encoder.fit_transform(y_test.reshape(-1, 1)).toarray()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## checking how a model performs with different learning rates\n",
+    "\n",
+    "fig, ax = plt.subplots(4,figsize=(10, 8))\n",
+    "ax = ax.flatten()\n",
+    "\n",
+    "learning_rates = [0.1, 0.01, 0.001, 0.0001]\n",
+    "for i, lr in enumerate(learning_rates):\n",
+    "    opt = Adam(learning_rate=lr)\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(X_train.shape[1], input_dim=X_train.shape[1], activation='relu'))\n",
+    "    model.add(Dense(12, activation='relu'))\n",
+    "    model.add(Dense(5, activation='softmax'))\n",
+    "    model.compile(loss='categorical_crossentropy', optimizer=opt, metrics=['accuracy'])\n",
+    "    trials = model.fit(X_train, y_train, epochs=10, validation_data=(X_test, y_test))\n",
+    "\n",
+    "    ax[i].plot(trials.history['accuracy'], label= str(lr))\n",
+    "    ax[i].set_title('Learning Rate: ' + str(lr))\n",
+    "    ax[i].set_xlabel('Epoch')\n",
+    "    ax[i].set_ylabel('Accuracy')\n",
+    "    ax[i].legend()\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(4,figsize=(10, 8))\n",
+    "ax = ax.flatten()\n",
+    "\n",
+    "activation_func = ['sigmoid', 'tanh', 'relu', 'elu']\n",
+    "for i, acfn in enumerate(activation_func):\n",
+    "    opt = Adam(learning_rate=0.001)\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(X_train.shape[1], input_dim=X_train.shape[1], activation='relu'))\n",
+    "    model.add(Dense(12, activation = acfn))\n",
+    "    model.add(Dense(5, activation='softmax'))\n",
+    "\n",
+    "    model.compile(loss='categorical_crossentropy', optimizer=opt, metrics=['accuracy'])\n",
+    "    \n",
+    "    trials = model.fit(X_train, y_train, epochs=10, validation_data=(X_test, y_test))\n",
+    "\n",
+    "    ax[i].plot(trials.history['accuracy'], label= str(acfn))\n",
+    "    ax[i].set_title('Activation Function: ' + str(acfn))\n",
+    "    ax[i].set_xlabel('Epoch')\n",
+    "    ax[i].set_ylabel('Accuracy')\n",
+    "    ax[i].legend()\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.shape[1]"
+   ]
   }
  ],
  "metadata": {
