--- a/Neuronal/Neuronal.ipynb
+++ b/Neuronal/Neuronal.ipynb
@@ -542,6 +542,46 @@
    "source": [
     "X_train.shape[1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = Adam(learning_rate=0.001)\n",
+    "model = Sequential()\n",
+    "model.add(Dense(X_train.shape[1], input_dim=X_train.shape[1], activation='relu'))\n",
+    "model.add(Dense(12, activation='relu'))\n",
+    "model.add(Dense(5, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss='categorical_crossentropy', optimizer=opt, metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trials = model.fit(X_train, y_train, epochs=10, validation_split=0.2, batch_size=64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model(model, to_file='model_diagram.png', show_shapes=True, show_layer_names=True)"
+   ]
   }
  ],
  "metadata": {
