--- a/Neuronal/Neuronal.ipynb
+++ b/Neuronal/Neuronal.ipynb
@@ -582,6 +582,22 @@
    "source": [
     "plot_model(model, to_file='model_diagram.png', show_shapes=True, show_layer_names=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "plt.plot(trials.history['accuracy'])\n",
+    "plt.plot(trials.history['val_accuracy'])\n",
+    "plt.title('model accuracy')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'test'], loc='upper left')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
