--- a/Neuronal/Neuronal.ipynb
+++ b/Neuronal/Neuronal.ipynb
@@ -598,6 +598,29 @@
     "plt.legend(['train', 'test'], loc='upper left')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss, accuracy = model.evaluate(X_test, y_test)\n",
+    "print(loss, accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(loss, accuracy)\n",
+    "plt.title('Loss vs Accuracy')\n",
+    "plt.xlabel('Loss')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
