--- a/Neuronal/Neuronal.ipynb
+++ b/Neuronal/Neuronal.ipynb
@@ -621,6 +621,15 @@
     "plt.ylabel('Accuracy')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('NN_model.h5')"
+   ]
   }
  ],
  "metadata": {
